
SET(MESH_MED
  ../../ressources/meshSquare.med
  )

file(COPY ${MESH_MED} DESTINATION ${CMAKE_BINARY_DIR}/tests/examples/Transport1DFV)
install(FILES ${MESH_MED} DESTINATION share/examples/Transport1DFV)

if (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC)
    ADD_TEST(test_validationTransport1DFV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Transport1DFV.py)
    SET_PROPERTY(TEST test_validationTransport1DFV PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib:${CMAKE_INSTALL_PREFIX}/lib/medcoupling:${CMAKE_INSTALL_PREFIX}/lib/med:${PETSC_DIR}/${PETSC_ARCH}/lib:${HDF5_ROOT_DIR}/lib")
    SET_PROPERTY(TEST test_validationTransport1DFV APPEND PROPERTY ENVIRONMENT "PYTHONPATH=${CMAKE_INSTALL_PREFIX}/lib/cdmath:${CMAKE_INSTALL_PREFIX}/bin/cdmath:${CMAKE_INSTALL_PREFIX}/${MEDCOUPLING_INSTALL_PYTHON}:${CMAKE_INSTALL_PREFIX}/bin/cdmath/postprocessing")
endif (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC)


